@@ -28,6 +28,11 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
+import static org.elasticsearch.xpack.core.security.action.apikey.CrossClusterApiKeyRoleDescriptorBuilder.CCR_INDICES_PRIVILEGE_NAMES;
+import static org.elasticsearch.xpack.core.security.action.apikey.CrossClusterApiKeyRoleDescriptorBuilder.CCS_AND_CCR_CLUSTER_PRIVILEGE_NAMES;
+import static org.elasticsearch.xpack.core.security.action.apikey.CrossClusterApiKeyRoleDescriptorBuilder.CCS_INDICES_PRIVILEGE_NAMES;
+import static org.elasticsearch.xpack.core.security.action.apikey.CrossClusterApiKeyRoleDescriptorBuilder.ROLE_DESCRIPTOR_NAME;
+import static org.elasticsearch.xpack.core.security.authz.RoleDescriptorTests.randomCrossClusterAccessRoleDescriptor;
 import static org.elasticsearch.xpack.core.security.authz.RoleDescriptorTests.randomUniquelyNamedRoleDescriptors;
 import static org.hamcrest.Matchers.equalTo;
 
@@ -36,17 +41,21 @@ public class GetApiKeyResponseTests extends ESTestCase {
     public void testSerialization() throws IOException {
         boolean withApiKeyName = randomBoolean();
         boolean withExpiration = randomBoolean();
+        final ApiKey.Type type = randomFrom(ApiKey.Type.values());
         ApiKey apiKeyInfo = createApiKeyInfo(
             (withApiKeyName) ? randomAlphaOfLength(4) : null,
             randomAlphaOfLength(5),
+            type,
             Instant.now(),
             (withExpiration) ? Instant.now() : null,
             false,
             randomAlphaOfLength(4),
             randomAlphaOfLength(5),
             randomBoolean() ? null : Map.of(randomAlphaOfLengthBetween(3, 8), randomAlphaOfLengthBetween(3, 8)),
-            randomBoolean() ? null : randomUniquelyNamedRoleDescriptors(0, 3),
-            randomUniquelyNamedRoleDescriptors(1, 3)
+            type == ApiKey.Type.CROSS_CLUSTER
+                ? List.of(randomCrossClusterAccessRoleDescriptor())
+                : randomFrom(randomUniquelyNamedRoleDescriptors(0, 3), null),
+            type == ApiKey.Type.CROSS_CLUSTER ? null : randomUniquelyNamedRoleDescriptors(1, 3)
         );
         GetApiKeyResponse response = new GetApiKeyResponse(Collections.singletonList(apiKeyInfo));
 
@@ -97,6 +106,7 @@ public class GetApiKeyResponseTests extends ESTestCase {
         ApiKey apiKeyInfo1 = createApiKeyInfo(
             "name1",
             "id-1",
+            ApiKey.Type.REST,
             Instant.ofEpochMilli(100000L),
             Instant.ofEpochMilli(10000000L),
             false,
@@ -109,6 +119,7 @@ public class GetApiKeyResponseTests extends ESTestCase {
         ApiKey apiKeyInfo2 = createApiKeyInfo(
             "name2",
             "id-2",
+            ApiKey.Type.REST,
             Instant.ofEpochMilli(100000L),
             Instant.ofEpochMilli(10000000L),
             true,
@@ -121,6 +132,7 @@ public class GetApiKeyResponseTests extends ESTestCase {
         ApiKey apiKeyInfo3 = createApiKeyInfo(
             null,
             "id-3",
+            ApiKey.Type.REST,
             Instant.ofEpochMilli(100000L),
             null,
             true,
@@ -130,15 +142,39 @@ public class GetApiKeyResponseTests extends ESTestCase {
             roleDescriptors,
             limitedByRoleDescriptors
         );
-        GetApiKeyResponse response = new GetApiKeyResponse(Arrays.asList(apiKeyInfo1, apiKeyInfo2, apiKeyInfo3));
+        final List<RoleDescriptor> crossClusterAccessRoleDescriptors = List.of(
+            new RoleDescriptor(
+                ROLE_DESCRIPTOR_NAME,
+                CCS_AND_CCR_CLUSTER_PRIVILEGE_NAMES,
+                new RoleDescriptor.IndicesPrivileges[] {
+                    RoleDescriptor.IndicesPrivileges.builder().indices("logs").privileges(CCS_INDICES_PRIVILEGE_NAMES).build(),
+                    RoleDescriptor.IndicesPrivileges.builder().indices("archive").privileges(CCR_INDICES_PRIVILEGE_NAMES).build(), },
+                null
+            )
+        );
+        ApiKey apiKeyInfo4 = createApiKeyInfo(
+            "name4",
+            "id-4",
+            ApiKey.Type.CROSS_CLUSTER,
+            Instant.ofEpochMilli(100000L),
+            null,
+            true,
+            "user-c",
+            "realm-z",
+            Map.of("foo", "bar"),
+            crossClusterAccessRoleDescriptors,
+            null
+        );
+        GetApiKeyResponse response = new GetApiKeyResponse(Arrays.asList(apiKeyInfo1, apiKeyInfo2, apiKeyInfo3, apiKeyInfo4));
         XContentBuilder builder = XContentFactory.jsonBuilder();
         response.toXContent(builder, ToXContent.EMPTY_PARAMS);
-        assertThat(Strings.toString(builder), equalTo(XContentHelper.stripWhitespace("""
+        assertThat(Strings.toString(builder), equalTo(XContentHelper.stripWhitespace(Strings.format("""
             {
               "api_keys": [
                 {
                   "id": "id-1",
                   "name": "name1",
+                  %s
                   "creation": 100000,
                   "expiration": 10000000,
                   "invalidated": false,
@@ -152,6 +188,7 @@ public class GetApiKeyResponseTests extends ESTestCase {
                 {
                   "id": "id-2",
                   "name": "name2",
+                  %s
                   "creation": 100000,
                   "expiration": 10000000,
                   "invalidated": true,
@@ -191,6 +228,7 @@ public class GetApiKeyResponseTests extends ESTestCase {
                 {
                   "id": "id-3",
                   "name": null,
+                  %s
                   "creation": 100000,
                   "invalidated": true,
                   "username": "user-c",
@@ -252,14 +290,78 @@ public class GetApiKeyResponseTests extends ESTestCase {
                       }
                     }
                   ]
+                },
+                {
+                  "id": "id-4",
+                  "name": "name4",
+                  %s
+                  "creation": 100000,
+                  "invalidated": true,
+                  "username": "user-c",
+                  "realm": "realm-z",
+                  "metadata": {
+                    "foo": "bar"
+                  },
+                  "role_descriptors": {
+                    "cross_cluster": {
+                      "cluster": [
+                        "cross_cluster_search", "cross_cluster_replication"
+                      ],
+                      "indices": [
+                        {
+                          "names": [
+                            "logs"
+                          ],
+                          "privileges": [
+                            "read", "read_cross_cluster", "view_index_metadata"
+                          ],
+                          "allow_restricted_indices": false
+                        },
+                        {
+                          "names": [
+                            "archive"
+                          ],
+                          "privileges": [
+                            "cross_cluster_replication", "cross_cluster_replication_internal"
+                          ],
+                          "allow_restricted_indices": false
+                        }
+                      ],
+                      "applications": [],
+                      "run_as": [],
+                      "metadata": {},
+                      "transient_metadata": {
+                        "enabled": true
+                      }
+                    }
+                  },
+                  "access": {
+                    "search": [
+                      {
+                        "names": [
+                          "logs"
+                        ],
+                        "allow_restricted_indices": false
+                      }
+                    ],
+                    "replication": [
+                      {
+                        "names": [
+                          "archive"
+                        ],
+                        "allow_restricted_indices": false
+                      }
+                    ]
+                  }
                 }
               ]
-            }""")));
+            }""", getType("rest"), getType("rest"), getType("rest"), getType("cross_cluster")))));
     }
 
     private ApiKey createApiKeyInfo(
         String name,
         String id,
+        ApiKey.Type type,
         Instant creation,
         Instant expiration,
         boolean invalidated,
@@ -272,6 +374,7 @@ public class GetApiKeyResponseTests extends ESTestCase {
         return new ApiKey(
             name,
             id,
+            type,
             creation,
             expiration,
             invalidated,
@@ -281,5 +384,9 @@ public class GetApiKeyResponseTests extends ESTestCase {
             roleDescriptors,
             limitedByRoleDescriptors
         );
+    }
+
+    private String getType(String type) {
+        return "\"type\": \"" + type + "\",";
     }
 }
